--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,16 @@ authors = ["Tsui Ho Ming <fighterming@gmail.com>"]
 license = "LICENSE"
 readme = "README.md"
 packages = [{ include = "twse_codes" }]
+
 [tool.poetry.dependencies]
 python = "^3.10"
+python-dotenv = "^1.0.1"
+requests = "^2.31.0"
+pandas = "^2.2.2"
+beautifulsoup4 = "^4.12.3"
+sqlalchemy = "^2.0.29"
+mysqlclient = "^2.2.4"
+pymysql = "^1.1.0"
 
 
 [build-system]
