--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ pandas = "^2"
 beautifulsoup4 = "^4"
 sqlalchemy = "^2"
 mysqlclient = "^2"
-pymysql = "^1"
+pymysql = "==1.1.0"
 
 
 [build-system]
